fix z-index for site map

--- a/assets/css/specific/_nav.sass
+++ b/assets/css/specific/_nav.sass
@@ -21,7 +21,7 @@
     position: relative
   &.logo
     position: relative
-    z-index: 2
+    z-index: 99999
     a 
       text-decoration: none
       color: white
@@ -53,7 +53,7 @@
   z-index: -1
   &.js-active
     opacity: 1
-    z-index: 1
+    z-index: 9999
 
 #mobile-friendships-to-accept
   display: none
@@ -103,7 +103,7 @@
   right: 10px
   +size(18px)
   cursor: pointer
-  z-index: 2
+  z-index: 99999
   span
     display: block
     background: white
